# template-python-package

./: .gitignore  NOTES.md  README.md  TEMPLATE.md  mypy.ini  pyproject.toml  ruff.toml
