[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-python-package"
dynamic = ["version"]
description = "Opinionated Python template for new packages."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]

[project.urls]
Issues = "https://github.com/joaopalmeiro/template-python-package/issues"
Source = "https://github.com/joaopalmeiro/template-python-package"

[tool.hatch.version]
path = "src/template_python_package/__init__.py"

[tool.hatch.envs.default]
detached = false
dependencies = ["ruff==0.3.0", "mypy==1.8.0"]

[tool.hatch.envs.default.scripts]
lint = ["- ruff check .", "mypy"]
format = ["- ruff check --fix .", "ruff format ."]

[tool.hatch.build]
packages = ["src/template_python_package"]
